package com.example.cardgame.model;

public enum PlayerType {
    HUMAN, AI, REMOTE
}
