package com.example.cardgame.model;

public enum CardPattern {
    INVALID,
    SINGLE,
    PAIR,
    TRIPLE,             // 三张
    QUADRUPLE,          // 炸弹
    STRAIGHT,           // 顺子
    FLUSH,              // 同花
    FULL_HOUSE,         // 葫芦
    IRON_BRANCH,        // 铁支
    STRAIGHT_FLUSH      // 同花顺
}
